Add front-end part of the login feature

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,6 +9,7 @@
   
   <body>
 	<div id="home">
+		  <navbar></navbar>
 		  <router-view></router-view>
 	</div>
     <script src="js/vue.js"></script>
@@ -17,6 +18,7 @@
 	<script src="js/moment.min.js"></script>
 	<script src="app/home.js"></script>
 	<script src="app/login.js"></script>
+	<script src="app/navbar.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
