--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,6 +18,7 @@
 	<script src="js/moment.min.js"></script>
 	<script src="app/home.js"></script>
 	<script src="app/login.js"></script>
+	<script src="app/registration.js"></script>
 	<script src="app/navbar.js"></script>
 	<script src="app/app.js"></script>
   </body>
