--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,6 +20,7 @@
 	<script src="app/login.js"></script>
 	<script src="app/registration.js"></script>
 	<script src="app/navbar.js"></script>
+	<script src="app/account.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
