--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
+	<link href="css/main.css" rel="stylesheet" />
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/popper.min.js"></script>
@@ -16,11 +17,15 @@
     <script src="js/vue-router.js"></script>
 	<script src="js/axios.js"></script>
 	<script src="js/moment.min.js"></script>
+	<script src="js/vuejs-datepicker.min.js"></script>
 	<script src="app/home.js"></script>
 	<script src="app/login.js"></script>
 	<script src="app/registration.js"></script>
 	<script src="app/navbar.js"></script>
 	<script src="app/account.js"></script>
+	<script src="app/apartments.js"></script>
+	<script src="app/amenities.js"></script>
+	<script src="app/apartment-profile.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
