--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,6 +26,7 @@
 	<script src="app/apartments.js"></script>
 	<script src="app/amenities.js"></script>
 	<script src="app/apartment-profile.js"></script>
+	<script src="app/new-apartment.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
