--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,6 +27,7 @@
 	<script src="app/amenities.js"></script>
 	<script src="app/apartment-profile.js"></script>
 	<script src="app/new-apartment.js"></script>
+	<script src="app/edit-apartment.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
