Enable listing reservations and changing reservation status

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,6 +28,7 @@
 	<script src="app/apartment-profile.js"></script>
 	<script src="app/new-apartment.js"></script>
 	<script src="app/edit-apartment.js"></script>
+	<script src="app/reservations.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
