--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,6 +29,7 @@
 	<script src="app/new-apartment.js"></script>
 	<script src="app/edit-apartment.js"></script>
 	<script src="app/reservations.js"></script>
+	<script src="app/users.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
