Add search feature

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,6 +31,7 @@
 	<script src="app/reservations.js"></script>
 	<script src="app/users.js"></script>
 	<script src="app/new-host.js"></script>
+	<script src="app/search.js"></script>
 	<script src="app/app.js"></script>
   </body>
 </html>
