--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,8 +4,9 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/main.css" rel="stylesheet" />
 	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
 	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
+
   </head>
   
   <body>
